--- a/agrovigia/.gitignore
+++ b/agrovigia/.gitignore
@@ -1,3 +1,8 @@
+agrovigio/settings.py
+*settings.py
+.project
+.pydevproject
+.settings/
 db.sqlite3
 .installed.cfg
 bin
@@ -11,3 +16,4 @@ lib
 lib64
 *.pyo
 *.pyc
+.project
