--- a/agrovigia/requirements.txt
+++ b/agrovigia/requirements.txt
@@ -1,5 +1,10 @@
 Django==1.9.5
+dj-database-url==0.4.1
 djangorestframework==3.3.3
+gunicorn==19.4.5
 pep8==1.7.0
 requests==2.9.1
+whitenoise==3.0
 wsgiref==0.1.2
+psycopg2==2.5.4
+
